--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Build the ${{ matrix.ARCHITECTURE }} rpm Wazuh ${{ matrix.TYPE }} package
         working-directory: ./rpms
         run: |
-          bash generate_rpm_package.sh -b master -t ${{ matrix.TYPE }} -a ${{ matrix.ARCHITECTURE }} --dev -j 2 --dont-build-docker --tag ${{ env.TAG }}
+          bash generate_rpm_package.sh -b master -t ${{ matrix.TYPE }} -a ${{ matrix.ARCHITECTURE }} --dev -j 2 --dont-build-docker --tag ${{ env.TAG }} -r 'test'
           echo "PACKAGE_NAME=$(ls ./output | grep .rpm | head -n 1)" >> $GITHUB_ENV
 
       - name: Upload Wazuh ${{ matrix.TYPE }} ${{ matrix.ARCHITECTURE }} package as artifact
@@ -54,3 +54,8 @@ jobs:
         with:
           name: ${{ env.PACKAGE_NAME }}
           path: ${{github.workspace}}/rpms/output/${{ env.PACKAGE_NAME }}
+
+  Call-test-packages-workflow:
+    needs: Wazuh-agent-rpm-package-builds
+    uses: ./.github/workflows/test-install-and-enable-rpm.yml
+    secrets: inherit
