--- a/.github/workflows/upload-deb-images.yml
+++ b/.github/workflows/upload-deb-images.yml
@@ -38,5 +38,5 @@ jobs:
   Call-build-packages-workflow:
     needs: Upload-deb-package-building-images
     if: github.event_name == 'pull_request'
-    uses: wazuh/wazuh-packages/.github/workflows/build-deb-packages.yml
+    uses: wazuh/wazuh-packages/.github/workflows/build-deb-packages.yml@${{ github.commit_ref }}
     secrets: inherit
