Change variable used to add reference to commit
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -57,5 +57,5 @@ jobs:
 
   Call-test-packages-workflow:
     needs: Wazuh-agent-rpm-package-builds
-    uses: wazuh/wazuh-packages/.github/workflows/test-install-and-enable-rpm.yml@${{ github.commit_ref }}
+    uses: wazuh/wazuh-packages/.github/workflows/test-install-and-enable-rpm.yml@${{ github.sha }}
     secrets: inherit
