--- a/.github/workflows/upload-deb-images.yml
+++ b/.github/workflows/upload-deb-images.yml
@@ -38,5 +38,5 @@ jobs:
   Call-build-packages-workflow:
     needs: Upload-deb-package-building-images
     if: github.event_name == 'pull_request'
-    uses: .github/workflows/build-deb-packages.yml
+    uses: ./.github/workflows/build-deb-packages.yml
     secrets: inherit
