--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -55,7 +55,8 @@ jobs:
           name: ${{ env.PACKAGE_NAME }}
           path: ${{github.workspace}}/rpms/output/${{ env.PACKAGE_NAME }}
 
-  Call-test-packages-workflow:
-    needs: Wazuh-agent-rpm-package-builds
-    uses: ./.github/workflows/test-install-and-enable-rpm.yml
-    secrets: inherit
+  # Call-test-packages-workflow:
+  #   needs: 
+  #     - Wazuh-agent-rpm-package-builds
+  #   uses: ./.github/workflows/test-install-and-enable-rpm.yml
+  #   secrets: inherit
