Fix variable  VERSION setting
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/test-install-and-enable-rpm.yml
+++ b/.github/workflows/test-install-and-enable-rpm.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Setup directories and variables
         run: |
-          VERSION=$GITHUB_WORKSPACE/VERSION
+          VERSION=$(cat $GITHUB_WORKSPACE/VERSION)
           echo 'PACKAGE_NAME=wazuh-${{ matrix.type }}-$VERSION-test.x86_64.rpm' >> $GITHUB_ENV
 
       - name: Download the Wazuh ${{ matrix.type }} package for ${{ matrix.system.DISTRO }}:${{ matrix.system.VERSION }}
