--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -22,6 +22,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - id: skip_check
+        uses: fkirc/skip-duplicate-actions@master
+
       - name: Get changed files
         uses: dorny/paths-filter@v2
         id: changes
