Add tests install and enable for debian
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/build-deb-packages.yml
+++ b/.github/workflows/build-deb-packages.yml
@@ -58,3 +58,8 @@ jobs:
           name: ${{ env.PACKAGE_NAME }}
           path: ${{github.workspace}}/debs/output/${{ env.PACKAGE_NAME }}
           if-no-files-found: error
+
+  Test-install-packages-deb:
+    needs: Wazuh-agent-deb-package-builds
+    uses: ./.github/workflows/test-install-and-enable-deb.yml
+    secrets: inherit
