Change quotes in docker images name for testing
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/test-install-and-enable-deb.yml
+++ b/.github/workflows/test-install-and-enable-deb.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        distro_name: [ubuntu:xenial, ubuntu:bionic, ubuntu:focal, ubuntu:jammy, debian:stretch, debian:buster, debian:bullseye, amazonlinux:2]
+        distro_name: ['ubuntu:xenial', 'ubuntu:bionic', 'ubuntu:focal', 'ubuntu:jammy', 'debian:stretch', 'debian:buster', 'debian:bullseye', 'amazonlinux:2']
         type: [agent, manager]
         arch: [amd64, i386]
         exclude:
