--- a/.github/workflows/upload-rpm-images.yml
+++ b/.github/workflows/upload-rpm-images.yml
@@ -35,7 +35,7 @@ jobs:
         run:
           bash $GITHUB_WORKSPACE/.github/actions/common-tools/build_and_push_image_to_ghcr.sh ${{ secrets.GITHUB_TOKEN }} ${{ github.actor}} ${{matrix.image.CONTAINER_NAME}} ${{ matrix.image.DOCKERFILE_PATH }} ${{ env.TAG }}
 
-  Call-build-packages-workflow:
+  Build-packages-rpm:
     needs: Upload-rpm-package-building-images
     if: github.event_name == 'pull_request'
     uses: ./.github/workflows/build-rpm-packages.yml
