--- a/.github/workflows/test-install-and-enable-deb.yml
+++ b/.github/workflows/test-install-and-enable-deb.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         distro_name: ['ubuntu:xenial', 'ubuntu:bionic', 'ubuntu:focal', 'ubuntu:jammy', 'debian:stretch', 'debian:buster', 'debian:bullseye', 'amazonlinux:2']
         type: [agent, manager]
-        arch: [amd64, i386]
+        arch: [x86_64, i386]
         exclude:
           - distro_name: amazonlinux:2
             arch: i386
