--- a/.github/workflows/test-install-and-enable-rpm.yml
+++ b/.github/workflows/test-install-and-enable-rpm.yml
@@ -10,12 +10,12 @@ jobs:
       matrix:
         system: [
         {NAME: 'oraclelinux:9', ARCH: "x86_64"},
-        {NAME: 'almalinux:0', ARCH: "x86_64"},
+        {NAME: 'almalinux:9', ARCH: "x86_64"},
         {NAME: 'rockylinux:9', ARCH: "x86_64"},
         {NAME: 'centos:7', ARCH: "x86_64"},
-        {NAME: 'centos:8', ARCH: "i386"},
-        {NAME: 'i386/centos:7', ARCH: "x86_64"},
+        {NAME: 'centos:8', ARCH: "x86_64"},
         {NAME: 'i386/centos:7', ARCH: "i386"},
+        {NAME: 'i386/centos:8', ARCH: "i386"},
         {NAME: 'redhat/ubi8:latest', ARCH: "x86_64"},
         {NAME: 'redhat/ubi9:latest', ARCH: "x86_64"}]
         type: [agent, manager]
