Remove distro combination ubuntu:jammy with i386 architecture
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/test-install-and-enable-deb.yml
+++ b/.github/workflows/test-install-and-enable-deb.yml
@@ -14,6 +14,8 @@ jobs:
         exclude:
           - type: manager
             arch: i386
+          - distro_name: 'ubuntu:jammy'
+            arch: i386
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
