--- a/.github/workflows/test-install-and-enable-rpm.yml
+++ b/.github/workflows/test-install-and-enable-rpm.yml
@@ -29,10 +29,11 @@ jobs:
       - name: Setup directories and variables
         run: |
           VERSION=$(cat $GITHUB_WORKSPACE/VERSION)
-          REVISION="${{ github.ref }}"
+          REVISION="${{ github.head_ref }}"
           echo "PACKAGE_NAME=wazuh-${{ matrix.type }}-$VERSION-$REVISION.${{matrix.system.ARCH}}.rpm" >> $GITHUB_ENV
 
       - name: Download the Wazuh ${{ matrix.type }} package for ${{ matrix.system.NAME }}
+        id: download_package
         uses: dawidd6/action-download-artifact@v2
         with:
           workflow: build-rpm-packages.yml
@@ -40,6 +41,14 @@ jobs:
           name: ${{env.PACKAGE_NAME}}
           if_no_artifact_found: fail
 
+      - name: Try again to download execution timetable from the last workflow if failed
+        if: ${{ always() && steps.download_package.outcome == 'failure' }}
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          workflow: build-rpm-packages.yml
+          workflow_conclusion: success
+          name: ${{env.PACKAGE_NAME}}
+          if_no_artifact_found: fail
 
       - name: Move the Wazuh ${{ matrix.type }} package for ${{ matrix.system.NAME }} to the packages directory
         run: |
