--- a/.github/workflows/test-install-and-enable-deb.yml
+++ b/.github/workflows/test-install-and-enable-deb.yml
@@ -32,16 +32,16 @@ jobs:
         uses: dawidd6/action-download-artifact@v2
         with:
           workflow: build-deb-packages.yml
-          workflow_conclusion: success
+          workflow_conclusion: in_progress
           name: ${{env.PACKAGE_NAME}}
-          if_no_artifact_found: warn
+          if_no_artifact_found: fail
       
       - name: Try again to download execution timetable from the last workflow if failed
         if: ${{ always() && steps.download_package.outcome == 'failure' }}
         uses: dawidd6/action-download-artifact@v2
         with:
           workflow: build-deb-packages.yml
-          workflow_conclusion: success
+          workflow_conclusion: in_progress
           name: ${{env.PACKAGE_NAME}}
           if_no_artifact_found: fail
 
