--- a/.github/workflows/test-install-and-enable-rpm.yml
+++ b/.github/workflows/test-install-and-enable-rpm.yml
@@ -33,23 +33,17 @@ jobs:
           echo "PACKAGE_NAME=wazuh-${{ matrix.type }}-$VERSION-$REVISION.${{matrix.system.ARCH}}.rpm" >> $GITHUB_ENV
           cat $GITHUB_ENV
 
-      - name: Download the Wazuh ${{ matrix.type }} package for ${{ matrix.system.NAME }}
-        id: download_package
-        uses: dawidd6/action-download-artifact@v2
+      - uses: Wandalen/wretry.action@master
+        name: Download the Wazuh ${{ matrix.type }} package for ${{ matrix.distro_name }}
         with:
-          workflow: build-rpm-packages.yml
-          workflow_conclusion: in_progress
-          name: ${{env.PACKAGE_NAME}}
-          if_no_artifact_found: fail
-
-      - name: Try again to download execution timetable from the last workflow if failed
-        if: ${{ always() && steps.download_package.outcome == 'failure' }}
-        uses: dawidd6/action-download-artifact@v2
-        with:
-          workflow: build-rpm-packages.yml
-          workflow_conclusion: in_progress
-          name: ${{env.PACKAGE_NAME}}
-          if_no_artifact_found: fail
+          action: dawidd6/action-download-artifact@v2
+          with: |
+            workflow: build-rpm-packages.yml
+            workflow_conclusion: in_progress
+            name: ${{env.PACKAGE_NAME}}
+            if_no_artifact_found: fail
+          attempt_limit: 3
+          attempt_delay: 2000
 
       - name: Move the Wazuh ${{ matrix.type }} package for ${{ matrix.system.NAME }} to the packages directory
         run: |
