--- a/.github/workflows/test-install-and-enable-rpm.yml
+++ b/.github/workflows/test-install-and-enable-rpm.yml
@@ -39,10 +39,10 @@ jobs:
           action: dawidd6/action-download-artifact@v2
           with: |
             workflow: build-rpm-packages.yml
-            commit: ${{ github.sha }}
+            branch: ${{ github.head_ref }}
             name: ${{env.PACKAGE_NAME}}
             if_no_artifact_found: fail
-          attempt_limit: 15
+          attempt_limit: 3
           attempt_delay: 60000
 
       - name: Move the Wazuh ${{ matrix.type }} package for ${{ matrix.system.NAME }} to the packages directory
