--- a/.github/workflows/test-install-and-enable-deb.yml
+++ b/.github/workflows/test-install-and-enable-deb.yml
@@ -25,18 +25,18 @@ jobs:
           VERSION=$(cat $GITHUB_WORKSPACE/VERSION)
           REVISION=$( echo ${{ github.head_ref }})
           echo "PACKAGE_NAME=wazuh-${{ matrix.type }}_${VERSION}-${REVISION}_${{ matrix.arch }}.deb" >> $GITHUB_ENV
-          cat $GITHUB_ENV
 
       - uses: Wandalen/wretry.action@master
         name: Download the Wazuh ${{ matrix.type }} package for ${{ matrix.distro_name }}
         with:
           action: dawidd6/action-download-artifact@v2
           with: |
-            branch: ${{ github.head_ref }}
+            workflow: build-deb-packages.yml
+            workflow_conclusion: in_progress
             name: ${{env.PACKAGE_NAME}}
             if_no_artifact_found: fail
-          attempt_limit: 3
-          attempt_delay: 60000
+          attempt_limit: 5
+          attempt_delay: 40000
 
       - name: Move the Wazuh ${{ matrix.type }} package for ${{ matrix.distro_name }} to the packages directory
         run: |
