--- a/.github/workflows/test-install-and-enable-rpm.yml
+++ b/.github/workflows/test-install-and-enable-rpm.yml
@@ -31,7 +31,6 @@ jobs:
           VERSION=$(cat $GITHUB_WORKSPACE/VERSION)
           REVISION=$( echo ${{ github.head_ref }} | sed 's/-/./g' )
           echo "PACKAGE_NAME=wazuh-${{ matrix.type }}-${VERSION}-${REVISION}.${{matrix.system.ARCH}}.rpm" >> $GITHUB_ENV
-          cat $GITHUB_ENV
 
       - uses: Wandalen/wretry.action@master
         name: Download the Wazuh ${{ matrix.type }} package for ${{ matrix.distro_name }}
@@ -39,11 +38,11 @@ jobs:
           action: dawidd6/action-download-artifact@v2
           with: |
             workflow: build-rpm-packages.yml
-            branch: ${{ github.head_ref }}
+            workflow_conclusion: in_progress
             name: ${{env.PACKAGE_NAME}}
             if_no_artifact_found: fail
-          attempt_limit: 3
-          attempt_delay: 60000
+          attempt_limit: 5
+          attempt_delay: 40000
 
       - name: Move the Wazuh ${{ matrix.type }} package for ${{ matrix.system.NAME }} to the packages directory
         run: |
