Call to clean workflow runs
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/clean-worflow-runs.yml
+++ b/.github/workflows/clean-worflow-runs.yml
@@ -5,6 +5,8 @@ on:
     - cron: '0 0 * * 1'
   pull_request:
     paths:
+      - 'rpms/SPECS/*'
+      - 'rpms/generate_rpm_package.sh'
       - '.github/workflows/clean-workflow-runs.yml'
 
 jobs:
