Check if artifact is available in the building package workflow
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/test-install-and-enable-rpm.yml
+++ b/.github/workflows/test-install-and-enable-rpm.yml
@@ -37,10 +37,9 @@ jobs:
         with:
           action: dawidd6/action-download-artifact@v2
           with: |
-            workflow: build-rpm-packages.yml
-            workflow_conclusion: in_progress
             name: ${{env.PACKAGE_NAME}}
             if_no_artifact_found: fail
+            check_artifacts: true
           attempt_limit: 5
           attempt_delay: 40000
 
