--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -58,6 +58,15 @@ jobs:
           path: ${{github.workspace}}/rpms/output/${{ env.PACKAGE_NAME }}
           if-no-files-found: error
 
+      - uses: Wandalen/wretry.action@master
+        name: Check if artifact is uploaded
+        with:
+          action: xSAVIKx/artifact-exists-action@v0
+          with: |
+            name: ${{env.PACKAGE_NAME}}
+          attempt_limit: 5
+          attempt_delay: 40000
+
   Test-install-packages-rpm:
     needs: Wazuh-agent-rpm-package-builds
     uses: ./.github/workflows/test-install-and-enable-rpm.yml
