--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -67,12 +67,16 @@ jobs:
           attempt_limit: 5
           attempt_delay: 40000
 
-      - name: Download the Wazuh ${{ matrix.type }} package for ${{ matrix.distro_name }}
-        uses: dawidd6/action-download-artifact@v2
+      - uses: Wandalen/wretry.action@master
+        name: Download the Wazuh ${{ matrix.type }} package for ${{ matrix.distro_name }}
         with:
-          name: ${{env.PACKAGE_NAME}}
-          if_no_artifact_found: fail
-          check_artifacts: true
+          action: dawidd6/action-download-artifact@v2
+          with: |
+            name: ${{env.PACKAGE_NAME}}
+            if_no_artifact_found: fail
+            check_artifacts: true
+          attempt_limit: 5
+          attempt_delay: 40000
 
   Test-install-packages-rpm:
     needs: Wazuh-agent-rpm-package-builds
