--- a/.github/workflows/offline-installation.yml
+++ b/.github/workflows/offline-installation.yml
@@ -8,6 +8,7 @@ jobs:
   Build-wazuh-install-script:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Build wazuh-install script and use pre-release packages
         working-directory: ./unattended_installer
         run: |
@@ -24,12 +25,26 @@ jobs:
           
   Test-offline-installation-debian:
     runs-on: ubuntu-latest
+    needs: Build-wazuh-install-script
     steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v3
+        with:
+          name: script
+      - name: Move unattended script
+        run: cp $GITHUB_WORKSPACE/wazuh-install.sh $GITHUB_WORKSPACE/.github/actions/offline-installation/wazuh-install.sh
       - name: Run script
         run: sudo bash $GITHUB_WORKSPACE/.github/actions/offline-installation/offline-installation.sh
 
   Test-offline-installation-rpm:
     runs-on: ubuntu-latest
+    needs: Build-wazuh-install-script
     steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v3
+        with:
+          name: script
+      - name: Move unattended script
+        run: cp $GITHUB_WORKSPACE/wazuh-install.sh $GITHUB_WORKSPACE/.github/actions/offline-installation/wazuh-install.sh
       - name: Launch docker and run script
         run: sudo docker run -v $GITHUB_WORKSPACE/.github/actions/offline-installation/:/tests centos:centos7 bash /tests/offline-installation.sh
